--- a/animation.html
+++ b/animation.html
@@ -5,13 +5,20 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+
+
+<h1> The Little Tea Cup </h1>
+
+
+
 <svg width="100%" viewbox="0 0 200 100">
 
+
  <line x1="75" y1="50" x2="125" y2="50"
- stroke="red" stroke-width="2"/>
+  stroke ="red" stroke-width="2"/>
 
 <path d="M75 50 C 70 100, 125 110, 125 50" stroke="red" fill="coral"
-  stroke-width="2">
+stroke-width="2">
   <animate attributeName="fill" from="coral" to="white" begin="mouseover"
   dur="4s"/>
 </path>
@@ -20,6 +27,16 @@
   stroke="red" fill="transparent"
  stroke-width="2"/>
 
+ <text x="80" y="70" font-family="Dancing-Script" font-size="4"
+   fill="white">Love APP academy</text>
+
+<h2> Poor lonely little tea cup. Sat sitting all alone with no one to sip his delectable tea. No one to enjoy a laugh with.
+  No one to hold his handle and take time to relax. Who or what will comfort this little funky cup?
+  Maybe a little elephannt? </h2>
+
+  <h3> I was inspired to make this tea cup because I love tea and I believe that everyone should enjoy it.
+     From the young age of 3 the first lesson I learned was that you always need something warm in your tummy to start the day.
+     So ever since then, every single morning my dad would send me to school with a travel mug of peppermint tea.
 
 
 
